CI: Setup go 1.16

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          go-version: 1.16
 
       - name: Build
         run: ./build.sh
@@ -34,3 +34,4 @@ jobs:
           tag: ${{ env.WGGO_VERSION }}
           overwrite: true
           file_glob: true
+          prerelease: true
