--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -4,9 +4,17 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      version:
+      wggo_version:
         description: 'wireguard-go version'
         required: false
+      go_version:
+        description: 'go environment version'
+        required: false
+      release:
+        description: 'Upload to Release'
+        type: boolean
+        required: true
+        default: 'false'
 
 jobs:
   build:
@@ -16,8 +24,8 @@ jobs:
 
       - name: Get Version Number
         run: |
-          if [[ -n "${{ github.event.inputs.version }}" ]]; then
-            WGGO_VERSION=${{ github.event.inputs.version }}
+          if [[ -n "${{ github.event.inputs.wggo_version }}" ]]; then
+            WGGO_VERSION=${{ github.event.inputs.wggo_version }}
           else
             WGGO_VERSION=$(curl -fsSL https://api.github.com/repos/WireGuard/wireguard-go/tags | grep 'name' | grep -v v | head -1 | cut -d'"' -f4)
           fi
@@ -27,9 +35,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup go
+        if: github.event.inputs.go_version == ''
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+          check-latest: true
+
+      - name: Setup go (target version)
+        if: github.event.inputs.go_version != ''
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ github.event.inputs.go_version }}
+          check-latest: true
 
       - name: Build
         run: ./build.sh
@@ -41,7 +58,7 @@ jobs:
           path: build
 
       - name: Upload to Release
-        if: github.event.inputs.version == ''
+        if: contains(github.event.action, 'Bump') || github.event.inputs.release == 'true'
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -50,3 +67,4 @@ jobs:
           overwrite: true
           file_glob: true
           prerelease: true
+          body: "Update logs: https://git.zx2c4.com/wireguard-go/log"
