--- a/.github/workflows/update-check.yml
+++ b/.github/workflows/update-check.yml
@@ -32,3 +32,11 @@ jobs:
       with:
         token: ${{ secrets.ACTIONS_PAT }}
         event-type: Bump Version to ${{ steps.getVersion.outputs.releaseTag }}
+
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 0
+        keep_minimum_runs: 1
