--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -36,14 +36,14 @@ jobs:
 
       - name: Setup go
         if: github.event.inputs.go_version == ''
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.17
+          go-version: '>=1.18'
           check-latest: true
 
       - name: Setup go (target version)
         if: github.event.inputs.go_version != ''
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ github.event.inputs.go_version }}
           check-latest: true
@@ -67,4 +67,4 @@ jobs:
           overwrite: true
           file_glob: true
           prerelease: true
-          body: "Update logs: https://git.zx2c4.com/wireguard-go/log"
+          body: "Change logs: https://git.zx2c4.com/wireguard-go/log"
